Version 1.0RC4-CVS (?? ??? 2005)
 - Fixed $charset problem in xml definition in login.php
 - Fixed bug 1168682:  RC3 Language Detection Broken for Safari
 - Fixed bug 1169403:  Public Access not default selected if 
   Particiapants not shown. 
 - Fixed bug 1169078: Bad function call in import_handler.php
 - Fixed bug 1168092: Overlapping events display problem
 - Fixed bug 1167281: View_l loses colour for "today"
 - Added new default webcal_config values to all sql table definition files
 - Fixed bug 1167790: class="selectedday" assignments in other than day.php
 - Changed edit_entry_handler to remove requirement for Admins to approve
   Public events that they create.
 - Applied bug fix 1151442: Overlapping events display error in week.php
 - Removed most instances of htnlentities as unneeded
 - Fixed bug 1162486: Path exposure issue with view_entry.php
 - Fixed problem, if non-user calendars are diabled, the most recent change
   to add Public Access to the 'Manage Calendar of:' list throws a Warning.
 - Added option to set LDAP_OPT_PROTOCOL_VERSION in user-ldap.php
 - Updated Danish translation
 - Updated Finnish translation
Version 1.0RC3 (11 Mar 2005)
 - Added 'Public Access' to Manage Calendar of: list, if Admin. 
 - Removed ODBC host:database option from php-dbi.php. If needed, host can be 
   added to DSN in settings.php.
 - Changed charset in Czech.txt from utf8 to UTF-8
 - Fixed problem with upcoming.php header. xml:lang and lang were set to full 
   LANGUAGE value, not abbreviation.
 - login.php: Added xml encoding back in, it's now dynamic like other pages.
 - upcoming.php: Fixed problem with "You are not Authorized" error message 
   being sent without a header.
 - Patch 1158090: convert comments for use with phpDocumentor
 - Updated German translation
 - Fixed bug 1156729:Global-view with no valid user creates a non-translatable message
 - Fixed problem with popups.php with long text strings going off screen.
   Maximum width is now configurable.