@@ -1,4 +1,6 @@
 Version 1.0RC4-CVS (?? ??? 2005)
+ - Fixed rendering problem in day.php with Safari
+ - Fixed bug 1168686: Month display collides with minicals on Safari
  - Fixed $charset problem in xml definition in login.php
  - Fixed bug 1168682:  RC3 Language Detection Broken for Safari
  - Fixed bug 1169403:  Public Access not default selected if 
